--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.7.1",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "jest-dom": "^3.0.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "react-testing-library": "^5.5.3",
     "styled-components": "^4.1.3"
   },
   "scripts": {
